--- a/404.html
+++ b/404.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>nimi toki pona</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <title>Nimi Toki Pona</title>
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
         // https://github.com/rafrex/spa-github-pages
