--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>Nimi Toki Pona</title>
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
